add docs and methods
